--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
       - name: ls
         run: ls -lah
       - name: cos_sim.py test
-      - run: python3 cos_sim.py
+        run: python3 cos_sim.py
