--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: ls
         run: ls -lah
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Installed dependencies
+        run: |
+          pip freeze
       - name: cos_sim.py test
         run: python3 cos_sim.py
