--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Installed dependencies
+      - name: check dependencies
         run: |
           pip freeze
       - name: cos_sim.py test
